fixed space on small screens

--- a/adventskalender/src/app/app.component.scss
+++ b/adventskalender/src/app/app.component.scss
@@ -11,3 +11,10 @@ div.fullheight {
     min-height: calc(100vh - 3rem - 1rem); // image is 3rem and padding is .5 rem each
     width: 100vw;
 }
+
+@media (max-width: 576px) {
+    div.fullheight.container {
+        width: calc(100vw - 1rem);
+        margin-left: 0;
+    }
+} 
